Version 1.4.0 (#17)
* implementation & compatibility with existing systems

* change model && prettier

* bypass authentication with development mode

* add route getGroups

* swagger with development mode

* new external component multiselect

* changing model

* users/groups management

* fix loop when not connected

* fix overflow

* UI - users/groups/controls management

* wip reviewf of routes

* review of routes

* test improvements

* user context useless

* item of db is named control from now

* search control implementation

* bug fix to call ci/cd

* fix when ci/cd fetch returned an error

* bug fix to call ci/cd entrypoint with wrong curl command

* user information called up when the component is mounted

* remove comments relating to swagger, which are too difficult to maintain

* review of the token authentication process

* search component

* remove swaggerjsdoc & update storybook@7.6.15

* change password improvements

* bug fix changebearertoken

* autocomplete off for search input

* prepa update version & database patch

* search auto focus on load

* loadership during compare process

* add or edit control only via UI

* bug UI: After comparison display immediate execution date

* version 1.4.0
